--- a/pom.xml
+++ b/pom.xml
@@ -82,11 +82,10 @@
 			<artifactId>mybatis-typehandlers-jsr310</artifactId>
 			<version>1.0.2</version>
 		</dependency>
-
 		<dependency>
 			<groupId>com.insight</groupId>
 			<artifactId>utils</artifactId>
-			<version>1.3.0.release</version>
+			<version>1.4.0-RELEASE</version>
 		</dependency>
 	</dependencies>
 
